--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 output.data
+aes/aes/aes
+backprop/backprop/backprop
+bfs/bulk/bfs
+bfs/queue/bfs
+fft/strided/fft
+fft/transpose/fft
+gemm/ncubed/gemm
+gemm/blocked/gemm
+kmp/kmp/kmp
+md/knn/md
+md/grid/md
+nw/nw/nw
+sort/merge/sort
+sort/radix/sort
+spmv/crs/spmv
+spmv/ellpack/spmv
+stencil/stencil2d/stencil
+stencil/stencil3d/stencil
+viterbi/viterbi/viterbi
