aes/aes uses new I/O and checking. ALL OTHERS BROKEN NOW.
Split support.h into support.[ch].
Added a set of benchmark-specific functions in kern/alg/support.c
  - these complement and use the common/support.c functions
Added a generate target to aes/aes. All benches should have this.
Updated input and check data for aes to ASCII versions.
Enabled checking by default in harness.

--- a/aes/aes/Makefile
+++ b/aes/aes/Makefile
@@ -1,11 +1,15 @@
-aes: aes.c aes.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o aes aes.c ../../common/harness.c
+aes: aes.c aes.h support.c ../../common/harness.c ../../common/support.c ../../common/support.h
+	$(CC) $(CFLAGS) -o aes aes.c -I../../common ../../common/harness.c ../../common/support.c support.c
 
 run: aes input.data check.data
 	./aes input.data check.data
+
+generate: generate.c aes.c aes.h support.c ../../common/support.c ../../common/support.h
+	$(CC) $(CFLAGS) -o generate -I../../common aes.c generate.c support.c ../../common/support.c
 
 hls: aes.c aes.h
 	vivado_hls hls.tcl
 
 clean:
 	rm -f aes
+	rm -f generate
