--- a/common/test/Makefile
+++ b/common/test/Makefile
@@ -3,8 +3,8 @@ CFLAGS=-Wall -Werror
 test: input_* test_support
 	./test_support
 
-test_support: test_support.c ../support.h
-	cc -o test_support $(CFLAGS) -I.. test_support.c
+test_support: test_support.c ../support.h ../support.c
+	cc -o test_support $(CFLAGS) -I.. test_support.c ../support.c
 
 clean:
 	rm -f test_support
