Disabled all builds except aes/aes.
Also, minor fix to aes Makefile.

--- a/aes/aes/Makefile
+++ b/aes/aes/Makefile
@@ -1,11 +1,11 @@
 aes: aes.c aes.h support.c ../../common/harness.c ../../common/support.c ../../common/support.h
-	$(CC) $(CFLAGS) -o aes aes.c -I../../common ../../common/harness.c ../../common/support.c support.c
+	$(CC) $(CFLAGS) -I../../common -o aes aes.c support.c ../../common/harness.c ../../common/support.c
 
 run: aes input.data check.data
 	./aes input.data check.data
 
 generate: generate.c aes.c aes.h support.c ../../common/support.c ../../common/support.h
-	$(CC) $(CFLAGS) -o generate -I../../common aes.c generate.c support.c ../../common/support.c
+	$(CC) $(CFLAGS) -I../../common -o generate aes.c generate.c support.c ../../common/support.c
 
 hls: aes.c aes.h
 	vivado_hls hls.tcl
