--- a/aes/aes/Makefile
+++ b/aes/aes/Makefile
@@ -1,11 +1,14 @@
-aes: aes.c aes.h support.c ../../common/harness.c ../../common/support.c ../../common/support.h
-	$(CC) $(CFLAGS) -I../../common -o aes aes.c support.c ../../common/harness.c ../../common/support.c
+SRCS=aes.c support.c ../../common/support.c
+FILES=$(SRCS) aes.h ../../common/support.h
+
+aes: $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o aes $(SRCS) ../../common/harness.c
 
 run: aes input.data check.data
 	./aes input.data check.data
 
-generate: generate.c aes.c aes.h support.c ../../common/support.c ../../common/support.h
-	$(CC) $(CFLAGS) -I../../common -o generate aes.c generate.c support.c ../../common/support.c
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
 
 hls: aes.c aes.h
 	vivado_hls hls.tcl
