--- a/bfs/queue/Makefile
+++ b/bfs/queue/Makefile
@@ -1,11 +1,21 @@
-bfs: bfs.c bfs.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o bfs bfs.c ../../common/harness.c
+KERN=bfs
+ALG=queue
 
-run: bfs input.data check.data
-	./bfs input.data check.data
+SRCS=$(KERN).c support.c ../../common/support.c
+FILES=$(SRCS) $(KERN).h ../../common/support.h
 
-hls: bfs.c bfs.h
+$(KERN): $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+
+run: $(KERN) input.data check.data
+	./$(KERN) input.data check.data
+
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+
+hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f bfs
+	rm -f $(KERN)
+	rm -f generate
