--- a/fft/transpose/Makefile
+++ b/fft/transpose/Makefile
@@ -1,11 +1,21 @@
-fft: fft.c fft.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o fft fft.c ../../common/harness.c -lm
+KERN=fft
+ALG=transpose
 
-run: fft input.data check.data
-	./fft input.data check.data
+SRCS=$(KERN).c support.c ../../common/support.c
+FILES=$(SRCS) $(KERN).h ../../common/support.h
 
-hls: fft.c fft.h
+$(KERN): $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+
+run: $(KERN) input.data check.data
+	./$(KERN) input.data check.data
+
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+
+hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f fft
+	rm -f $(KERN)
+	rm -f generate
