--- a/kmp/kmp/Makefile
+++ b/kmp/kmp/Makefile
@@ -1,11 +1,21 @@
-kmp: kmp.c kmp.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o kmp kmp.c ../../common/harness.c
+KERN=kmp
+ALG=kmp
 
-run: kmp input.data check.data
-	./kmp input.data check.data
+SRCS=$(KERN).c support.c ../../common/support.c
+FILES=$(SRCS) $(KERN).h ../../common/support.h
 
-hls: kmp.c kmp.h
+$(KERN): $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+
+run: $(KERN) input.data check.data
+	./$(KERN) input.data check.data
+
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+
+hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f kmp
+	rm -f $(KERN)
+	rm -f generate
