--- a/sort/radix/Makefile
+++ b/sort/radix/Makefile
@@ -1,11 +1,21 @@
-sort: sort.c sort.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o sort sort.c ../../common/harness.c
+KERN=sort
+ALG=radix
 
-run: sort input.data check.data
-	./sort input.data check.data
+SRCS=$(KERN).c support.c ../../common/support.c
+FILES=$(SRCS) $(KERN).h ../../common/support.h
 
-hls: sort.c sort.h
+$(KERN): $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+
+run: $(KERN) input.data check.data
+	./$(KERN) input.data check.data
+
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+
+hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f sort
+	rm -f $(KERN)
+	rm -f generate
