--- a/spmv/crs/Makefile
+++ b/spmv/crs/Makefile
@@ -1,11 +1,21 @@
-spmv: spmv.c spmv.h ../../common/harness.c
-	$(CC) $(CFLAGS) -o spmv spmv.c ../../common/harness.c
+KERN=spmv
+ALG=crs
 
-run: spmv input.data check.data
-	./spmv input.data check.data
+SRCS=$(KERN).c support.c ../../common/support.c
+FILES=$(SRCS) $(KERN).h ../../common/support.h
 
-hls: spmv.c spmv.h	
+$(KERN): $(FILES) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+
+run: $(KERN) input.data check.data
+	./$(KERN) input.data check.data
+
+generate: $(FILES) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+
+hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f spmv
+	rm -f $(KERN)
+	rm -f generate
