Minor Makefile fixes and more CI tests.
Added default CFLAGS to all benchmark Makefiles.
Added a top-level 'generate' target.
Added user CFLAGS to top-level run and generate targets.
Added run and generate targets to CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ compiler:
   - clang
   - gcc
 script:
-  - make build CFLAGS="-Wall -Werror -Wno-unused-label"
+  - make clean && make build CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
+  - make clean && make run CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
+  - make clean && make generate CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
 # A nudge to avoid checking in broken builds.
 notifications:
   email:
