--- a/kmp/kmp/Makefile
+++ b/kmp/kmp/Makefile
@@ -1,6 +1,8 @@
 KERN=kmp
 ALG=kmp
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
