--- a/aes/aes/Makefile
+++ b/aes/aes/Makefile
@@ -1,6 +1,8 @@
 KERN=aes
 ALG=aes
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
