--- a/nw/nw/Makefile
+++ b/nw/nw/Makefile
@@ -1,6 +1,8 @@
 KERN=nw
 ALG=nw
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
