--- a/spmv/crs/Makefile
+++ b/spmv/crs/Makefile
@@ -1,6 +1,8 @@
 KERN=spmv
 ALG=crs
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
