--- a/viterbi/viterbi/Makefile
+++ b/viterbi/viterbi/Makefile
@@ -1,6 +1,8 @@
 KERN=viterbi
 ALG=viterbi
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
