--- a/templates/Makefile
+++ b/templates/Makefile
@@ -1,6 +1,8 @@
 KERN=FIXME
 ALG=FIXME
 
+CFLAGS?=-O3 -Wall -Wno-unused-label
+
 SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
