--- a/fft/transpose/Makefile
+++ b/fft/transpose/Makefile
@@ -7,13 +7,13 @@ SRCS=$(KERN).c support.c ../../common/support.c
 FILES=$(SRCS) $(KERN).h ../../common/support.h
 
 $(KERN): $(FILES) ../../common/harness.c
-	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c
+	$(CC) $(CFLAGS) -I../../common -o $(KERN) $(SRCS) ../../common/harness.c -lm
 
 run: $(KERN) input.data check.data
 	./$(KERN) input.data check.data
 
 generate: $(FILES) generate.c
-	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c -lm
 
 hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
