--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ compiler:
   - clang
   - gcc
 script:
-  - make clean && make build CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
-  - make clean && make run CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
-  - make clean && make generate CFLAGS="-O3 -Wall -Werror -Wno-unused-label"
+  - make test
 # A nudge to avoid checking in broken builds.
 notifications:
   email:
