--- a/bfs/queue/Makefile
+++ b/bfs/queue/Makefile
@@ -14,10 +14,10 @@ run: $(KERN) input.data check.data
 
 generate: $(FILES) generate.c
 	$(CC) $(CFLAGS) -I../../common -o generate $(SRCS) generate.c
+	./generate
 
 hls: $(KERN).c $(KERN).h
 	vivado_hls hls.tcl
 
 clean:
-	rm -f $(KERN)
-	rm -f generate
+	rm -f $(KERN) generate output.data
